Java 16 records support. Build logic.