@@ -3,20 +3,16 @@ import java.util.stream.Stream
 
 plugins {
     id("build-logic.build-commons")
-    id("me.champeau.jmh") version "0.6.6"
 }
 
 dependencies {
 
-    compileOnly("org.objenesis:objenesis:3.3")
     implementation(project(":jdk8"))
+    implementation(project(":jdk9"))
 
     testImplementation(testFixtures(project(":jdk8")))
     testImplementation("org.hamcrest:hamcrest:2.2")
     testImplementation("org.junit.jupiter:junit-jupiter:5.10.0")
-
-    jmh("com.esotericsoftware:kryo:5.5.0")
-    jmh("io.github.kostaskougios:cloning:1.10.3")
 
 }
 
@@ -48,8 +44,4 @@ tasks.withType<JavaCompile> {
 
 tasks.named<Test>("test") {
     jvmArgs = modulesJvmArgs("--add-opens")
-}
-
-jmh {
-    jvmArgs.addAll(modulesJvmArgs("--add-opens"))
 }
